fix word wrap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,150 +1,152 @@
-html, body {
-  font-family: sans-serif;
-  background-color: black;
+html,
+body {
+	font-family: sans-serif;
+	background-color: black;
 }
 
 main {
-  width: 588px;
-  margin: 0 auto;
+	width: 588px;
+	margin: 0 auto;
 }
 
 .danger {
-  color: red;
+	color: red;
 }
 
 .img-profile {
-  margin: 0 12px 0 18px;
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
+	margin: 0 12px 0 18px;
+	width: 32px;
+	height: 32px;
+	border-radius: 50%;
 }
 
 .compose {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  background-color: #E7F7FD;
-  padding: 8px;
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	justify-content: flex-start;
+	background-color: #e7f7fd;
+	padding: 8px;
 }
 
 .compose .input-container {
-  min-height: 36px;
-  flex: 1 auto; }
+	min-height: 36px;
+	flex: 1 auto;
+}
 
 .compose .input-container textarea {
-  box-sizing: border-box;
-  width: 100%;
-  height: 34px;
-  padding: 8px 32px 8px 8px;
-  border: 1px solid #C4ECFB;
-  border-radius: 8px;
-  resize: none;
+	box-sizing: border-box;
+	width: 100%;
+	height: 34px;
+	padding: 8px 32px 8px 8px;
+	border: 1px solid #c4ecfb;
+	border-radius: 8px;
+	resize: none;
 }
 
 .compose .input-container textarea.expanded {
-  height: 68px;
+	height: 68px;
 }
 
 .compose .input-container textarea:focus {
-  outline: none;
+	outline: none;
 }
 
 .compose .actions {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
-  color: #13B5F0;
-  padding: 8px 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: row;
+	color: #13b5f0;
+	padding: 8px 0;
 }
 
 .compose .input-button {
-  position: absolute;
-  right: 24px;
-  top: 18px;
-  color: #13B5F0;
+	position: absolute;
+	right: 24px;
+	top: 18px;
+	color: #13b5f0;
 }
 
 .actions .action-buttons i {
-   margin: 4px 4px;
+	margin: 4px 4px;
 }
 
 .icon-button {
-  box-sizing: border-box;
-  border: 1px solid transparent;
-  background-color: transparent;
+	box-sizing: border-box;
+	border: 1px solid transparent;
+	background-color: transparent;
 }
 
 .icon-button:hover {
-  border: 1px solid rgba(19,181,240,0.4);
-  color: #13B5F0;
+	border: 1px solid rgba(19, 181, 240, 0.4);
+	color: #13b5f0;
 }
 
 .icon-button:focus {
-  outline: none;
+	outline: none;
 }
 
 .icon-button i {
-  color: #13B5F0;
-  font-size: 20px;
+	color: #13b5f0;
+	font-size: 20px;
 }
 
 .post-tweet {
-  height: 32px;
-  width: 72px;
-  border: none;
-  border-radius: 16px;
-  background-color: #13B5F0;
-  color: white;
-  font-weight: 500;
-  font-size: 16px;
+	height: 32px;
+	width: 72px;
+	border: none;
+	border-radius: 16px;
+	background-color: #13b5f0;
+	color: white;
+	font-weight: 500;
+	font-size: 16px;
 }
 
 .post-tweet[disabled] {
-  opacity: 0.3;
+	opacity: 0.3;
 }
 
 .post-tweet:focus {
-  outline: none;
+	outline: none;
 }
 
 .tweets {
-  background-color: white;
+	background-color: white;
 }
 
 .tweets .tweet {
-  display: flex;
-  flex-direction: row;
-  border-top: 1px solid lightgray;
-  padding: 8px;
+	display: flex;
+	flex-direction: row;
+	border-top: 1px solid lightgray;
+	padding: 8px;
+	word-break: break-all;
 }
 
 .tweets .tweet .message {
-  flex: 1 auto;
-  padding: 0 8px;
+	flex: 1 auto;
+	padding: 0 8px;
 }
 
 .display-name {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .handle {
-  color: lightgray;
+	color: lightgray;
 }
 
 .img-tweet-profile {
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
+	width: 48px;
+	height: 48px;
+	border-radius: 50%;
 }
 
 .tweet .posted-by span {
-  margin-right: 8px;
+	margin-right: 8px;
 }
 
 .tweet .tweet-actions i {
-  margin-right: 32px;
+	margin-right: 32px;
 }
-
